k8s/monitoring/node-exporter-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter:latest
          args: ['--path.rootfs=/host']
          ports:
            - containerPort: 9100
          volumeMounts:
            - name: host-root
              mountPath: /host
              readOnly: true
      hostPID: true
      volumes:
        - name: host-root
          hostPath:
            path: /
