k8s/monitoring/dingtalk-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dingtalk-webhook
  namespace: monitoring
spec:
  selector:
    app: dingtalk-webhook
  ports:
    - port: 5000
      targetPort: 5000
